# temporal-predicate-py

./: .gitignore  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
examples/: README.md  basic_worker.py  ecommerce_worker.py  policy.json
examples/demo/: Dockerfile.demo  Dockerfile.sidecar  README.md  demo.py  docker-compose.demo.yml  policy.demo.json  start-demo-native.sh  start-demo.sh
src/predicate_temporal/: __init__.py  interceptor.py
tests/: test_interceptor.py
