[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "predicate-temporal"
version = "0.1.0"
description = "Temporal.io Worker Interceptor for Predicate Authority Zero-Trust authorization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Predicate Systems", email = "hello@predicatesystems.dev" }
]
keywords = [
    "temporal",
    "authorization",
    "zero-trust",
    "security",
    "ai-agents",
    "predicate-authority"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "temporalio>=1.5.0",
    "predicate-authority>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/PredicateSystems/predicate-temporal-python"
Documentation = "https://docs.predicatesystems.dev/integrations/temporal"
Repository = "https://github.com/PredicateSystems/predicate-temporal-python"
Issues = "https://github.com/PredicateSystems/predicate-temporal-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/predicate_temporal"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["temporalio.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["predicate_temporal"]

[tool.coverage.run]
source = ["src/predicate_temporal"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
